[package]
name = "rust-echo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dns-lookup = "2.0.4"
